--- a/RestExemplo-web/src/main/webapp/templates/ClienteView.html
+++ b/RestExemplo-web/src/main/webapp/templates/ClienteView.html
@@ -1,18 +1,41 @@
 <!-- ClienteView -->
 
 <form class="form-horizontal">
-    <div class="row">
-        <div class="control-group">
-            <label class="col-sm-2 control-label" for="nomeCliente">
+    <div class="row-fluid">
+        <div class="form-group">
+            <div class="control-group">
+                <label class="col-sm-1 control-label" for="nomeCliente">
                 Nome:
             </label>
-            <div class="col-sm-10">
-                <input type="text"  id="nomeCliente" maxlength="60" class="input-sm form-control"/>
+                <div class="col-sm-3">
+                    <input type="text" id="nomeCliente" class="input-sm form-control" />
+                </div>
+            </div>
+            <div class="control-group">
+                <label class="col-sm-1 control-label" for="sobrenomeCliente">
+                Sobrenome:
+            </label>
+                <div class="col-sm-7">
+                    <input type="text" id="sobrenomeCliente" class="input-sm form-control" />
+                </div>
+            </div>
+        </div>
+        <div class="form-group">
+            <div class="control-group">
+                <label class="col-sm-1 control-label" for="idadeCliente">
+                Idade:
+            </label>
+                <div class="col-sm-3">
+                    <input type="number" id="idadeCliente" class="input-sm form-control" />
+                </div>
             </div>
         </div>
     </div>
-    <div class="btn-group">
-        <button type="button" id="btnAlterar" class="btn btn-secundary" title="Alterar">Alterar</button>
-		<button type="button" id="btnSalvar" class="btn btn-primary" title="Salvar" style="display: none">Salvar</button>
+    <div class="container" id="resultado"></div>
+
+    <div class="container">
+        <button type="button" id="btnAlterar" class="btn btn-secundary" style="display: none" title="Alterar">Alterar</button>
+        <button type="button" id="btnSalvar" class="btn btn-primary" title="Salvar">Salvar</button>
+        <button type="button" id="btnListar" class="btn btn-secundary" style="display: none" title="Listar">Listar</button>
     </div>
 </form>
