--- a/RestExemplo-web/src/main/webapp/templates/ClienteListView.html
+++ b/RestExemplo-web/src/main/webapp/templates/ClienteListView.html
@@ -10,11 +10,11 @@
 			</tr>
 		</thead>
 		<tbody>
-			<% _.each(listClientes, function(cliente, index){ %>
+			<!--<% _.each(listClientes, function(cliente, index){ %>-->
 				<tr>
-					<td class="text-center"><%= cliente.nome %></td>
-					<td class="text-center"><%= cliente.sobrenome %></td>
-					<td class="text-center"><%= cliente.idade %></td>
+					<td class="text-center"><%= nome %></td>
+					<td class="text-center"><%= sobrenome %></td>
+					<td class="text-center"><%= idade %></td>
 					<td>
 						<div class="btn-group">
 							<button id="btnDetalhaCliente" type="button" class="btn btn-mini" title="Detalhar Cliente">
@@ -23,7 +23,7 @@
 						</div>
 					</td>
 				</tr>
-			<% }); %>
+			<!-- <% }); %> -->
 		</tbody>
 	</table>
 </fieldset>
